--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ gunicorn==22.0.0
 xgboost==2.0.3
 numpy==1.26.4
 pandas==2.2.2
+scikit-learn==1.4.2
+joblib==1.4.2
+pymongo==4.7.2
+python-dotenv==1.0.1
