--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -5,4 +5,4 @@ runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
   maxInstances: 1
-entryPoint: gunicorn --workers 1 --bind 0.0.0.0:$PORT app:app
+entryPoint: gunicorn --workers 1 --bind 0.0.0.0:$PORT --timeout 120 app:app
